--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -5,6 +5,7 @@
     <title>Ask</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css" />
+
     <link rel="stylesheet" href="/stylesheets/main.css" />
 
 </head>
@@ -31,10 +32,10 @@
                 <!--left nav-bar-->
                 <ul class="nav navbar-nav">
                     <li>
-                        <a href="/">Home </a>
+                        <a href="/home">Home </a>
                     </li>
                     <li>
-                        <a href="#"> Q</a>
+                        <a href="/questions"> Q</a>
                     </li>
                     <li>
                         <a href="#"> Friends</a>
@@ -46,7 +47,9 @@
 
                 <ul class="nav navbar-nav navbar-right">
                     <li>
-                        <a href="#">osama</a>
+                        <a href="/profile/<%= currentUser.id %>">
+                            <%= currentUser.username %>
+                        </a>
                     </li>
                     <li class="dropdown">
                         <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"><i class="glyphicon glyphicon-cog "></i> <span class="caret "></span></a>
