--- a/views/test.ejs
+++ b/views/test.ejs
@@ -16,87 +16,90 @@
             <div class="col-md-6 col-md-offset-3">
                 <div class="panel panel-default">
                     <div class="panel-heading">
-                        <h3 class="panel-title">register </h3>
+                        <h3 class="panel-title"> registertion </h3>
                     </div>
-                    <form action="/register" method="POST" class="ui form">
-                        <!-- <div class="panel-body"> -->
-                        <div class="ui segment">
-                            <div class="ui two column very relaxed grid">
-                                <div class="column">
-                                    <div class="field">
-                                        <label class="pull-left">Username</label>
-                                        <div class="ui left icon input">
-                                            <input type="text" name="username" placeholder="Username">
-                                            <i class="user icon"></i>
-                                        </div>
-                                    </div>
-                                    <div class="field">
-                                        <label class="pull-left">E-mail</label>
-                                        <div class="ui left icon input">
-                                            <input type="text" name="email" placeholder="E-mail">
-                                            <i class="at icon"></i>
-                                        </div>
-                                    </div>
-                                    <div class="field">
-                                        <label class="pull-left">name</label>
-                                        <div class="ui left icon input">
-                                            <input type="text" name="name" placeholder="name">
-                                            <i class="user icon"></i>
-                                        </div>
-                                    </div>
-                                    <div class="field">
-                                        <label class="pull-left">password</label>
-                                        <div class="ui left icon input">
-                                            <input type="password" placeholder="password">
-                                            <i class="lock icon"></i>
-                                        </div>
-                                    </div>
+                    <form action="/register" method=" POST " enctype="multipart/form-data " class="ui form ">
+                        <div class="panel-body ">
+                            <div class="ui segment ">
+                                <div class="ui two column very relaxed grid ">
+                                    <div class="column ">
+                                        <div class="field">
+                                            <label class="pull-left">Username</label>
+                                            <div class="ui left icon input">
+                                                <input type="text" name="username" placeholder="Username">
+                                                <i class="user icon"></i>
+                                            </div>
 
+                                            <div class="field">
+                                                <label class="pull-left">password</label>
+                                                <div class="ui left icon input">
+                                                    <input type="password" name="password" placeholder="password">
+                                                    <i class="lock icon"></i>
+                                                </div>
+                                            </div>
+
+                                            <div class="field ">
+                                                <label class="pull-left ">avatar</label>
+                                                <div class="ui input ">
+
+                                                    <input type="text " name="userinfo[avatar] " placeholder="url">
+
+                                                </div>
+                                            </div>
+
+                                            <div class="field ">
+                                                <label class="pull-left ">E-mail</label>
+                                                <div class="ui left icon input ">
+                                                    <input type="text " name="userinfo[email] " placeholder="E-mail ">
+                                                    <i class="at icon "></i>
+                                                </div>
+                                            </div>
+                                            <div class="field ">
+                                                <label class="pull-left ">name</label>
+                                                <div class="ui left icon input ">
+                                                    <input type="text " name="userinfo[name] " placeholder="name ">
+                                                    <i class="user icon "></i>
+                                                </div>
+                                            </div>
+
+
+                                        </div>
+                                    </div>
+                                    <div class="column ">
+                                        <div class="field ">
+                                            <label for="birthday " class="pull-left ">Birthday:</label>
+                                            <input type="date" id="birthday " name="userinfo[birthday] ">
+                                        </div>
+                                        <div class="field ">
+                                            <label class="pull-left ">bio</label>
+                                            <textarea name="userinfo[bio] " id=" " cols="30 " rows="6 " placeholder="type " maxlength="150 "></textarea>
+
+                                        </div>
+
+
+                                        <div>
+                                            <button class="ui button secondary btn-block " type="submit " value="Login ">submit</button>
+                                        </div>
+
+                                    </div>
                                 </div>
-
-                                <div class="column">
-                                    <div class="field">
-                                        <label for="birthday" class="pull-left">Birthday:</label>
-                                        <input type="date" id="birthday" name="birthday">
-                                    </div>
-                                    <div class="field">
-                                        <label class="pull-left">bio</label>
-                                        <textarea name="bio" id="" cols="30" rows="7" placeholder="type " maxlength="150"></textarea>
-                                        <!-- <div class="ui left icon input">
-                                                    <input type="text" placeholder="name">
-                                                    <i class="user icon"></i>
-                                                </div> -->
-                                    </div>
-
-
-                                    <div>
-                                        <button class="ui button secondary btn-block" type="submit" value="Login">submit</button>
-                                    </div>
-                                    <a href="/" class="ui facebook button btn-block" type="submit" value="Login">
-                                        <i class="facebook icon"></i> Facebook
-                                    </a>
-                                    <a href="/login"> login? </a>
+                                <div class="ui vertical divider ">
+                                    and
                                 </div>
                             </div>
-                            <div class="ui vertical divider">
-                                and
-                            </div>
+
+
                         </div>
-
-
-                        <!-- </div> -->
                     </form>
                 </div>
             </div>
         </div>
     </div>
 
-    <ul class="slideshow">
+    <ul class="slideshow ">
         <li></li>
         <li></li>
         <li></li>
         <li></li>
         <li></li>
     </ul>
-
-    <%- include('./partials/footer') %>
